--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "npm": "^6.7.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
